# MiniCUA

./: Dockerfile  LICENSE  README.md  pyproject.toml
client/: mcp-server.py  mcptools.py
etc/: supervisord-alpine.conf
server/: main.py
