[project]
name = "minicua"
version = "0.1.0"
description = "A minimal Linux setup for your CUA agent"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
dependencies = [
    "fastmcp>=2.12.4",
    "pillow>=11.3.0",
]
author = [
    {name = "Minghan Zhang", email = "minghan139.zhang@gmail.com"},
]
[tool.hatch.build.targets.wheel]
packages = ["client"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
minicua-mcp-server = "client.mcptools:main"
